Added Functions Generator and method "_" for executing funs